fix some alignment and stylings

--- a/group-project/src/main/webapp/style.css
+++ b/group-project/src/main/webapp/style.css
@@ -16,7 +16,7 @@ a {
 #logo-img {
     position: relative;
     width: 100px;
-    padding: 30px;
+    margin: 20px;
 }
 /* Hero */
 .hero {
@@ -82,7 +82,7 @@ a {
     text-align:center;
 }
 
-#suggestion-btn {
+.big-btn {
     background-color: transparent;
     border: 2px solid;
     color: #EA7C69;
@@ -95,7 +95,7 @@ a {
     transition: all 0.3s;
 }
 
-#suggestion-btn:hover{
+.big-btn:hover{
     border-color: #f1ff5c;
     color: white;
     box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
@@ -140,16 +140,8 @@ h2 {
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 
-#heading {
+#container div {
   display: flex;
-  font-family: Roboto;
-  /* color: #3e4958; */
-  justify-content: center;
-  font-size: 36px;
-  font-weight: 900;
-}
-
-#featured {
   font-family: Roboto;
   background-color: #fff;
   font-weight: 700;
